MMC Version 0.10.1
  Updated client
    - Added error notification to MFD upload dialog
    - Amended scroll on MDF Dialog
    - Changed text on exit button
    - fixed bug in eventVariableInformation
  Updated CANMIO family MDF's, CANPAN, CANACC5, CANACC8 & CANACE8C with channel names update


MMC Version 0.10.0
  Updated client
  - added optional 'channel names' functionality
  - includes import & export of channel names
  - existing MDF's will work as before, fully backward compatible
  - MDF's need updating to use the optional channel names feature
  - Fixed NodeVariableDual max value
  added global set_FCU_compatibility() after node reset and program node,
  as nodes will revert to default after reset

Version 0.9.5
  Updated client with 'DELETE UNUSED' option in Event view
  - This will delete an event in the 'Events View' list,
    but only if the event has no linked nodes, AND no user supplied name

Version 0.9.4
  Node programming changes
  - Wrong placement of state change meant there was potential of multiple resets being sent
  - Delay added before checksum check command sent to ensure all ack's for data have been received
  - logging tidied up & extra statements added to bootloaderdata.txt file
  - added support for 'data ack' response type to support Ian's V3 bootloader
  Client updated
  - Added node reset at end of node restore
  cbusLibrary updated
  - Header for 29 bit messages changed to match Mike Boltons document (bit 2 set)

Version 0.9.3
  Added 'named' option to event view modes (all, short, long)
   - this option will only display events that have been named by the User
  Made the node view option (spli, full) sticky, so it's remembered after changing views

Version 0.9.2
  Major restructing of node programming
    - now supports download of CANCOMPUTE rule set hex files
    - progress display is now a % of the whole amount being programmed, not each segment as before